# rag-scoreboard-lab

./: .gitignore  PROJECT_BRIEF.md  README.md  pyproject.toml
.github/workflows/: test.yml
rag_scoreboard/: __init__.py  __main__.py  io.py  metrics.py
tests/: test_scoreboard.py
tests/fixtures/: qrels.json  run.json
